--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A dynamically rendered restaurant homepage.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "say-hello": "echo 'Hello World'",
+    "awesome-npm": "npm run say-hello && echo 'echo NPM is awesome!'",
+    "bash-hello": "bash hello.sh",
+    "js-add": "node add.js"
   },
   "repository": {
     "type": "git",
